[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-langchain"
version = "0.1.1"
description = "Drop-in Tessera integration for LangChain. One line of config routes your existing ChatOpenAI / ChatAnthropic / ChatMistralAI / ChatGroq / ChatCohere through Tessera's auto-route + auto-cache + auto-compress + auto-batch proxy. Free tier: 60M tokens/mo. Production: 20% of measured savings."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Tessera (Fintechagency OÜ)", email = "contact@tesseraai.io" }
]
keywords = [
  "tessera",
  "langchain",
  "langchain-integration",
  "llm",
  "openai",
  "anthropic",
  "mistral",
  "groq",
  "cohere",
  "cost-optimization",
  "ai-cost",
  "llm-cost",
  "llm-proxy",
  "gpt-4o",
  "claude",
  "gemini",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]
dev = [
  "pytest>=7.0",
  "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://tesseraai.io"
Documentation = "https://tesseraai.io/dev"
Repository = "https://github.com/tessera-llm/tessera-langchain"
Issues = "https://github.com/tessera-llm/tessera-langchain/issues"
Changelog = "https://github.com/tessera-llm/tessera-langchain/blob/main/CHANGELOG.md"
"Main SDK" = "https://github.com/tessera-llm/tessera-sdk"

[tool.hatch.build.targets.wheel]
packages = ["tessera_langchain"]
include = ["tessera_langchain/py.typed"]
